<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".both.view.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen12"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_45"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/dimen2"
        android:layout_marginRight="@dimen/dimen2"
        android:layout_marginTop="@dimen/dimen30"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen0"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dimen2"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:paddingLeft="@dimen/dimen30"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="@dimen/dimen0"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:spinnerMode="dialog"></Spinner>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/user_name"
            android:paddingLeft="@dimen/dimen30"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:src="@drawable/loading7"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:paddingLeft="@dimen/dimen30"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:src="@drawable/loading7"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/resent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/login_tv_color"
            android:textSize="@dimen/dimen_text_16" />

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/remember"
            android:textColor="@color/login_tv_color"
            android:textSize="@dimen/dimen_text_16" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_bg"
        android:padding="@dimen/dimen12"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
