<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.view.activity.StudentHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary2">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_mine"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                app:placeholderImage="@drawable/default_user_icon"
                app:roundAsCircle="true" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name2"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:src="@drawable/toolbar_search" />

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:src="@drawable/toolbar_more" />
            </LinearLayout>
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary2"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/my_book"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rb_bg"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/bookshelf"
                android:textColor="@color/colorPrimary2"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/book_shop"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rb_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/book_shop"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/find"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/rb_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/find"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rg"
            android:layout_below="@id/layout"></android.support.v4.view.ViewPager>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_user_face"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:placeholderImage="@drawable/default_user_icon"
                app:roundAsCircle="true" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/phone_login_verify_arrows" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv_user_face"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/drawer_my_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv"
                android:padding="5dp"
                android:text="@string/my_account"
                android:textColor="#8000"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/drawer_sign_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv2"
                android:padding="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/student_home_drawer_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/drawer_shelf_clouds" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv3"
                android:padding="5dp"
                android:text="@string/cloud_bookshelf"
                android:textColor="@color/student_home_drawer_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/drawer_audio_zone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv4"
                android:padding="5dp"
                android:text="@string/voice_area"
                android:textColor="@color/student_home_drawer_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/drawer_user_reading_gift" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/iv5"
                android:padding="5dp"
                android:text="@string/reader_gift"
                android:textColor="@color/student_home_drawer_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="15dp"
                    android:src="@drawable/drawer_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/iv_setting"
                    android:padding="5dp"
                    android:text="@string/setting"
                    android:textColor="@color/student_home_drawer_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_day_or_night"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="15dp"
                    android:src="@drawable/drawer_night" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/iv_day_or_night"
                    android:padding="5dp"
                    android:text="@string/night"
                    android:textColor="@color/student_home_drawer_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_bg"
            android:text="退出登录"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
